# nugu-kwd

./: .checkpatch.conf  .gitmodules  CMakeLists.txt  README.md  nugu-kwd.map  nugu-kwd.pc.in
.github/workflows/: merged.yaml  pull_request.yaml  release.yaml
packaging/bionic/: changelog  copyright
packaging/focal/: changelog  libnugu-kwd.lintian-overrides
packaging/jammy/: changelog
packaging/noble/: changelog  control  rules
src/: CMakeLists.txt  keyword_detector.c
